# sc2xml

./: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
data/: test1.h  test2.h  test3.h  test3.stub.h  test4.h
src/: Makefile.am  Makefile.in  main.c  misc.c  misc.h  parser.c  parser.tab.h  parser.y  sc2xml.h  scanner.c  scanner.l  xml.c  xml.h
